compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__other_variant_unreachable_when_inferred2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1459
expression: "\npub type Wibble {\n  Wibble\n  Wobble\n  Wubble\n}\n\npub fn main() {\n  let always_wobble = Wobble\n  case always_wobble {\n    Wibble | Wubble -> panic\n    Wobble -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main() {
  let always_wobble = Wobble
  case always_wobble {
    Wibble | Wubble -> panic
    Wobble -> Nil
  }
}


----- WARNING
warning: Unreachable pattern
   ┌─ /src/warning/wrn.gleam:11:5
   │
11 │     Wibble | Wubble -> panic
   │     ^^^^^^

This pattern cannot be reached as it matches on a variant of a type which
is never present.

Hint: It can be safely removed.

warning: Unreachable pattern
   ┌─ /src/warning/wrn.gleam:11:14
   │
11 │     Wibble | Wubble -> panic
   │              ^^^^^^

This pattern cannot be reached as it matches on a variant of a type which
is never present.

Hint: It can be safely removed.
