compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__redundant_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 850
expression: "\npub fn main(x) {\ncase x {\n59 -> \"gleew\"\n14 -> \"glabber\"\n1 -> \"\"\n_ -> \"glooper\"\n2 -> \"\"\n3 -> \"glen\"\n4 -> \"glew\"\n}\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
case x {
59 -> "gleew"
14 -> "glabber"
1 -> ""
_ -> "glooper"
2 -> ""
3 -> "glen"
4 -> "glew"
}
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:8:1
  │
8 │ 2 -> ""
  │ ^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.

warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:9:1
  │
9 │ 3 -> "glen"
  │ ^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.

warning: Unreachable pattern
   ┌─ /src/warning/wrn.gleam:10:1
   │
10 │ 4 -> "glew"
   │ ^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
