compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__redundant_5.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 884
expression: "\npub fn main(x) {\ncase x {\n\"P\" -> 4\n\"\" -> 65\n\"P\" -> 19\n_ -> 3\n}\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
case x {
"P" -> 4
"" -> 65
"P" -> 19
_ -> 3
}
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:6:1
  │
6 │ "P" -> 19
  │ ^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
