compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__redundant_float_scientific_notation.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 975
expression: "\npub fn main(x) {\n  case x {\n    10.0 -> \"ten\"\n    1.0e1 -> \"also ten\"\n    _ -> \"other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    10.0 -> "ten"
    1.0e1 -> "also ten"
    _ -> "other"
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     1.0e1 -> "also ten"
  │     ^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
