compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__redundant_float_with_no_trailing_decimal.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 945
expression: "\npub fn main(x) {\n  case x {\n    1.0 -> \"one\"\n    1. -> \"another one\"\n    _ -> \"other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    1.0 -> "one"
    1. -> "another one"
    _ -> "other"
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     1. -> "another one"
  │     ^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
